# opengl_tutorial_testing

./: CMakeLists.txt  Display.cpp  Display.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
res/: shader.frag  shader.vert
